welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:4: error: not found: value sommme
  else{return sommme}
              ^