welcome.lessons.welcome.bat.bool2.TeenSum.scala.code
def teenSum(a:Int, b:Int):Int = {
  var somme = a + b
  if( (12<a && a<20) || (2<a && a<20)){return 19}
  else{return sommme}
}